# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//ink:__subpackages__"],
)

cc_library(
    name = "jni",
    tags = ["keep_dep"],
    visibility = ["//visibility:public"],
    deps = [
        ":in_progress_stroke_jni",
        ":mesh_creation_jni",
        ":stroke_input_batch_jni",
        ":stroke_jni",
    ],
)

filegroup(
    name = "cinterop_headers",
    srcs = glob(["*_native.h"]),
)

cc_library(
    name = "cinterop",
    deps = [
        ":in_progress_stroke_native",
        ":mesh_creation_native",
        ":stroke_input_batch_native",
        ":stroke_native",
    ],
)

cc_library(
    name = "stroke_native",
    srcs = ["stroke_native.cc"],
    hdrs = ["stroke_native.h"],
    deps = [
        ":stroke_input_batch_native_helper",
        ":stroke_native_helper",
        "//ink/brush",
        "//ink/brush/internal/jni:brush_native_helper",
        "//ink/geometry:affine_transform",
        "//ink/geometry:partitioned_mesh",
        "//ink/geometry/internal/jni:partitioned_mesh_native_helper",
        "//ink/jni/internal:jni_defines",
        "//ink/strokes:stroke",
        "//ink/strokes/input:stroke_input_batch",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

cc_library(
    name = "stroke_jni",
    srcs = ["stroke_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":stroke_input_jni_helper",
        ":stroke_native",
        "//ink/jni/internal:jni_defines",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "stroke_native_helper",
    hdrs = ["stroke_native_helper.h"],
    deps = [
        "//ink/strokes:stroke",
        "@abseil-cpp//absl/log:absl_check",
    ],
)

cc_library(
    name = "in_progress_stroke_native",
    srcs = ["in_progress_stroke_native.cc"],
    hdrs = ["in_progress_stroke_native.h"],
    deps = [
        ":in_progress_stroke_native_helper",
        ":stroke_input_batch_native_helper",
        ":stroke_native_helper",
        "//ink/brush/internal/jni:brush_native_helper",
        "//ink/geometry:point",
        "//ink/geometry:rect",
        "//ink/geometry/internal/jni:mesh_format_native_helper",
        "//ink/strokes:in_progress_stroke",
        "//ink/strokes/input:stroke_input",
        "//ink/strokes/input:stroke_input_batch",
        "//ink/types:duration",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "in_progress_stroke_jni",
    srcs = ["in_progress_stroke_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":in_progress_stroke_native",
        ":in_progress_stroke_native_helper",
        ":stroke_input_jni_helper",
        "//ink/geometry/internal/jni:box_accumulator_jni_helper",
        "//ink/geometry/internal/jni:vec_jni_helper",
        "//ink/jni/internal:jni_buffer_util",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:status_jni_helper",
        "@abseil-cpp//absl/base:nullability",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "in_progress_stroke_native_helper",
    srcs = ["in_progress_stroke_native_helper.cc"],
    hdrs = ["in_progress_stroke_native_helper.h"],
    deps = [
        "//ink/brush",
        "//ink/geometry:mutable_mesh",
        "//ink/strokes:in_progress_stroke",
        "//ink/types:duration",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_macros",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "in_progress_stroke_native_helper_test",
    srcs = ["in_progress_stroke_native_helper_test.cc"],
    deps = [
        ":in_progress_stroke_native_helper",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "stroke_input_jni_helper",
    srcs = ["stroke_input_jni_helper.cc"],
    hdrs = ["stroke_input_jni_helper.h"],
    deps = [
        ":in_progress_stroke_native",
        ":stroke_input_batch_native",
        "//ink/jni/internal:jni_jvm_interface",
        "//ink/strokes/input:stroke_input",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

cc_library(
    name = "stroke_input_batch_native_helper",
    hdrs = ["stroke_input_batch_native_helper.h"],
    deps = [
        "//ink/strokes/input:stroke_input_batch",
        "@abseil-cpp//absl/log:absl_check",
    ],
)

cc_library(
    name = "stroke_input_batch_native",
    srcs = ["stroke_input_batch_native.cc"],
    hdrs = ["stroke_input_batch_native.h"],
    deps = [
        ":stroke_input_batch_native_helper",
        "//ink/geometry:angle",
        "//ink/strokes/input:stroke_input",
        "//ink/types:duration",
        "//ink/types:physical_distance",
        "@abseil-cpp//absl/status",
    ],
)

cc_library(
    name = "stroke_input_batch_jni",
    srcs = ["stroke_input_batch_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":stroke_input_batch_native",
        ":stroke_input_batch_native_helper",
        ":stroke_input_jni_helper",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:status_jni_helper",
        "//ink/strokes/input:stroke_input",
        "//ink/strokes/input:stroke_input_batch",
        "@abseil-cpp//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "mesh_creation_jni",
    srcs = ["mesh_creation_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":mesh_creation_native",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:status_jni_helper",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "mesh_creation_native",
    srcs = ["mesh_creation_native.cc"],
    hdrs = ["mesh_creation_native.h"],
    deps = [
        ":stroke_input_batch_native_helper",
        "//ink/geometry:mesh",
        "//ink/geometry:mesh_format",
        "//ink/geometry:partitioned_mesh",
        "//ink/geometry:point",
        "//ink/geometry:tessellator",
        "//ink/geometry/internal:polyline_processing",
        "//ink/geometry/internal/jni:partitioned_mesh_native_helper",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:status_jni_helper",
        "//ink/strokes/input:stroke_input_batch",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)
