# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//ink:__subpackages__"],
)

cc_library(
    name = "input_model_impl",
    hdrs = ["input_model_impl.h"],
    deps = [
        "//ink/strokes/input:stroke_input_batch",
        "//ink/strokes/internal:modeled_stroke_input",
    ],
)

cc_library(
    name = "passthrough_input_modeler",
    srcs = ["passthrough_input_modeler.cc"],
    hdrs = ["passthrough_input_modeler.h"],
    deps = [
        ":input_model_impl",
        "//ink/geometry:distance",
        "//ink/geometry:vec",
        "//ink/strokes/input:stroke_input",
        "//ink/strokes/input:stroke_input_batch",
        "//ink/strokes/internal:modeled_stroke_input",
        "//ink/types:duration",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "passthrough_input_modeler_test",
    srcs = ["passthrough_input_modeler_test.cc"],
    deps = [
        "//ink/brush:brush_family",
        "//ink/geometry:angle",
        "//ink/geometry:type_matchers",
        "//ink/strokes/input:fuzz_domains",
        "//ink/strokes/input:stroke_input",
        "//ink/strokes/input:stroke_input_batch",
        "//ink/strokes/internal:stroke_input_modeler",
        "//ink/types:duration",
        "//ink/types:physical_distance",
        "//ink/types:type_matchers",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status_matchers",
        "@fuzztest//fuzztest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "sliding_window_input_modeler",
    srcs = ["sliding_window_input_modeler.cc"],
    hdrs = ["sliding_window_input_modeler.h"],
    deps = [
        ":input_model_impl",
        "//ink/geometry:angle",
        "//ink/geometry:distance",
        "//ink/geometry:point",
        "//ink/geometry:vec",
        "//ink/geometry/internal:lerp",
        "//ink/strokes/input:stroke_input",
        "//ink/strokes/input:stroke_input_batch",
        "//ink/strokes/internal:modeled_stroke_input",
        "//ink/types:duration",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "sliding_window_input_modeler_test",
    srcs = ["sliding_window_input_modeler_test.cc"],
    deps = [
        ":sliding_window_input_modeler",
        "//ink/brush:brush_family",
        "//ink/geometry:angle",
        "//ink/geometry:type_matchers",
        "//ink/strokes/input:fuzz_domains",
        "//ink/strokes/input:stroke_input",
        "//ink/strokes/input:stroke_input_batch",
        "//ink/strokes/internal:modeled_stroke_input",
        "//ink/strokes/internal:stroke_input_modeler",
        "//ink/types:duration",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
        "@fuzztest//fuzztest",
        "@googletest//:gtest_main",
    ],
)
